# JPP_Interpreter

./: JPP-Interpreter.cabal  Kornel_Howil.txt  Main.hs  README.md  makefile  tabela_cech.txt
bad/: deklaracja_bez_inicjalizacji.txt  dzielenie_przez_0.txt  modulo_0.txt  nieosiagniety_return.txt  nieznana_funkcja.txt  nieznana_zmienna.txt  parsing_deklaracja_bez_inicjalizacji.txt  parsing_funkcja_print.txt  runtime_dzielenie_przez_0.txt  runtime_modulo_0.txt  runtime_nieosiagniety_return.txt  static_argument_zduplikowany.txt  static_brak_main.txt  static_dodawanie_odejmowanie_booli.txt  static_dodawanie_odejmowanie_funkcji.txt.txt  static_nieznana_funkcja.txt  static_nieznana_zmienna.txt  static_odejmowanie_stringow.txt  static_porownywanie_funkcji.txt  static_print_funkcji.txt  static_zla_liczba_argumentow.txt  static_zle_wywowanie_funkcji.txt  static_zly_return.txt  static_zly_typ_1.txt  static_zly_typ_2.txt  static_zly_typ_argumentow.txt  static_zly_typ_main.txt  zla_liczba_argumentow.txt  zla_skladnia_1.txt  zla_skladnia_2.txt  zly_return.txt  zly_typ_1.txt  zly_typ_2.txt  zly_typ_argumentow.txt
good/: 01_typy.txt  02_arytmetyka.txt  03_zmienne.txt  04_print.txt  05_while_if_else.txt  06_rekurencja.txt  07_przekazywanie.txt  09_2_statyczne_wiazanie.txt  09_3_statyczne_wiazanie.txt  09_zagniezdzenia.txt  10_bledy_1.txt  10_bledy_2.txt  11_funkcje.txt  12_statyczne_typowanie.txt
src/: Helper.hs  Interpreter.hs  TypeChecker.hs  grammar.cf
src/parser/: AbsGrammar.hs  LexGrammar.hs  ParGrammar.hs  PrintGrammar.hs  SkelGrammar.hs  grammar.cf
