cabal-version:      2.4
name:               JPP-Interpreter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             kornelhowil
maintainer:         kornelhowil@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable JPP-Interpreter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: AbsGrammar, LexGrammar, ParGrammar, TypeChecker, Helper

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0, containers, mtl, array
    hs-source-dirs:   ., src, src/parser
    default-language: Haskell2010
